clusters/olympus/qnap-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qnap-ui
  namespace: qnap-ui
spec:
  type: ExternalName
  externalName: qnap.nwlnexus.net
  ports:
    - name: https
      port: 443
      protocol: TCP
